# hatchetfish

./: .gitignore  CMakeLists.txt  Makefile  README.md  hatchetfish.vcxproj  hatchetfish.vcxproj.filters
include/: hatchetfish.hpp  hatchetfish_log.hpp  hatchetfish_stopwatch.hpp
src/: hatchetfish.cpp  hatchetfish_log.cpp  hatchetfish_stopwatch.cpp
